[package]
name = "abl_formatter"
version = "0.1.0"
authors = ["lyndon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
clap = "2.33.1"
pad = "0.1.6"
regex = "1.4.3"
lazy_static = "1.4.0"